--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.4.2",
+    "classnames": "^2.2.5",
     "events": "^1.0.2",
     "flux": "^2.0.1",
     "react": "^0.12.1"
