--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "mini-todoflux",
-  "version": "1.0.0",
-  "description": "",
-  "main": "App.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ReactWeek/mini4-todoflux"
-  },
-  "author": "Tyler McGinnis",
-  "scripts": {
-    "start": "npm run build && npm run dev-server",
-    "build": "./node_modules/.bin/webpack",
-    "dev-server": "node_modules/.bin/http-server -p 3000 public/"
-  },
+  "name": "flux-todolist-fun",
+  "version": "0.0.1",
+  "description": "Just a simple app for creating tasks.",
+  "main": "js/app.js",
   "dependencies": {
-    "axios": "^0.4.2",
-    "classnames": "^2.2.5",
-    "events": "^1.0.2",
-    "flux": "^2.0.1",
-    "react": "^0.12.1"
+    "flux": "^2.0.0",
+    "react": "^0.12.0",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
+    "browserify": "~6.2.0",
     "css-loader": "^0.23.1",
+    "envify": "~3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "http-server": "^0.8.0",
-    "jsx-loader": "^0.12.2",
     "node-sass": "^3.8.0",
+    "react": "^0.12.0",
+    "reactify": "^0.15",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "watchify": "~2.1.0",
     "webpack": "^1.13.1"
+  },
+  "scripts": {
+    "start": "watchify -o js/bundle.js -v -d .",
+    "build": "browserify . | uglifyjs -cm > js/bundle.min.js"
+  },
+  "author": "Ken Wheeler",
+  "browserify": {
+    "transform": [
+      "reactify",
+      "envify"
+    ]
   }
 }
