--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "flux": "^2.0.0",
     "react": "^0.12.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "object-assign": "^4.0.1"
   },
   "devDependencies": {
     "browserify": "~6.2.0",
