--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "watchify": "~2.1.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-notifier": "^1.3.0"
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d .",
